--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h2>Nandana Vipin</h2>
     </header>
     <article>
-      <img src="Nandana.jpeg" alt="Nandana Vipin">
+      <img src="./Nandana.jpeg" alt="Nandana Vipin">
       <p>35,Rose Nagar,Sreekariyam<br>
          Trivandrum<br>
          Kerala<br>
